Optimized image sizes and loading

--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@
       <div class="posthid">
         <div class="posts" style="transform: translateX(calc(0%))">
           <div
+            loading="eager"
             class="postimg"
-            style="background-image: url(img/noticias/1\ da\ 1.jpg)"
+            style="background-image: url(img/noticias/1.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -259,7 +260,7 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/2\ da\ 2.png)"
+            style="background-image: url(img/noticias/2.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -276,7 +277,7 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/3.jfif)"
+            style="background-image: url(img/noticias/3.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -294,7 +295,7 @@
 
           <div
             class="postimg"
-            style="background-image: url(img/noticias/4\ da\ 4.jpg)"
+            style="background-image: url(img/noticias/4.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -308,7 +309,7 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/5\ da\ 5.png)"
+            style="background-image: url(img/noticias/5.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -325,7 +326,7 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/5.jpeg)"
+            style="background-image: url(img/noticias/6.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -343,7 +344,7 @@
           </div>
           <div
             class="postimg"
-            style="background-image: url(img/noticias/6.png)"
+            style="background-image: url(img/noticias/7.webp)"
           >
             <div class="postgrad">
               <div class="tituloebtn">
@@ -436,7 +437,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/prox jogos/c.png" class="timemandante" />
+                      <img
+                        src="img/prox jogos/c.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Fluminense</p>
                   </div>
@@ -449,7 +454,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -465,7 +474,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/prox jogos/amg.png" class="timemandante" />
+                      <img
+                        src="img/prox jogos/amg.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>América MG</p>
                   </div>
@@ -478,7 +491,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -494,7 +511,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -507,7 +528,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img\prox jogos\path.png" class="timemandante" />
+                      <img
+                        src="img\prox jogos\path.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Athlético PR</p>
                   </div>
@@ -526,6 +551,7 @@
                       <img
                         src="img/prox jogos/fortaleza.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Fortaleza</p>
@@ -539,7 +565,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -554,7 +584,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -567,7 +601,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img\prox jogos\cu.png" class="timemandante" />
+                      <img
+                        src="img\prox jogos\cu.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Cuiabá</p>
                   </div>
@@ -582,7 +620,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -595,7 +637,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img\prox jogos\pal.png" class="timemandante" />
+                      <img
+                        src="img\prox jogos\pal.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Palmeiras</p>
                   </div>
@@ -614,6 +660,7 @@
                       <img
                         src="img/prox jogos/vasco.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Vasco</p>
@@ -627,7 +674,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -642,7 +693,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -658,6 +713,7 @@
                       <img
                         src="img\prox jogos\gremio.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Grêmio</p>
@@ -677,6 +733,7 @@
                       <img
                         src="img/prox jogos/braga.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Bragantino</p>
@@ -690,7 +747,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -705,7 +766,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -721,6 +786,7 @@
                       <img
                         src="img\prox jogos\santos.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Santos</p>
@@ -740,6 +806,7 @@
                       <img
                         src="img/prox jogos/coritiba.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Coritiba</p>
@@ -753,7 +820,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -768,7 +839,11 @@
                 <div class="times">
                   <div class="mandante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -781,7 +856,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img\prox jogos\cru.png" class="timemandante" />
+                      <img
+                        src="img\prox jogos\cru.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Cruzeiro</p>
                   </div>
@@ -800,6 +879,7 @@
                       <img
                         src="img/prox jogos/inter.png"
                         class="timemandante"
+                        loading="lazy"
                       />
                     </div>
                     <p>Internacional</p>
@@ -813,7 +893,11 @@
                   </div>
                   <div class="visitante">
                     <div class="escudop">
-                      <img src="img/botafogoescudo.png" class="timemandante" />
+                      <img
+                        src="img/botafogoescudo.png"
+                        class="timemandante"
+                        loading="lazy"
+                      />
                     </div>
                     <p>Botafogo</p>
                   </div>
@@ -1092,6 +1176,7 @@
                 <a
                   href="https://www.gov.br/mds/pt-br/acoes-e-programas/lei-de-incentivo-ao-esporte"
                   ><img
+                    loading="lazy"
                     class="patroimg"
                     src="img/patrocinio/parceiros/leideincentivo.png"
                 /></a>
