--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatiple" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Botafogo de Futebol e Regatas</title>
+    <link rel="preload" href="img/loja/tchetche.jpg" as="image" />
+    <link rel="preload" href="img/loja/adry.jpg" as="image" />
+    <link rel="preload" href="img/loja/edu.jpg" as="image" />
     <link rel="icon" type="image/x-icon" href="img/botafogoescudo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
